--- a/styles/index.css
+++ b/styles/index.css
@@ -586,6 +586,10 @@ main>section:nth-of-type(3)>div>div .bordera a:focus video {
         width: 100%;
     }
 
+    section:nth-of-type(2) section a div:last-of-type h3 {
+        color: #FFFBF4;
+    }
+
 }
 
 
